--- a/SignApplication/Web.config
+++ b/SignApplication/Web.config
@@ -32,6 +32,9 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <!--<httpModules>
+      <add name="AuthHttpModule" type="SignApplication.Global.Authentication.AuthHttpModule"/>
+    </httpModules>-->
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -43,6 +46,9 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <modules>
+      <add name="AuthHttpModule" type="SignApplication.Global.Authentication.AuthHttpModule" />
+    </modules>
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
