--- a/SignApplication.Model/SignApplication.Model.csproj
+++ b/SignApplication.Model/SignApplication.Model.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DBConnection\SignAppContext.cs" />
     <Compile Include="DBConnection\SignDBInitializer.cs" />
     <Compile Include="Document.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="RequestDocContent.cs" />
     <Compile Include="SystemList.cs" />
