--- a/SignApplication/SignApplication.csproj
+++ b/SignApplication/SignApplication.csproj
@@ -43,6 +43,12 @@
     <Reference Include="Antlr3.Runtime">
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="AutoMapper">
+      <HintPath>..\packages\AutoMapper.3.3.0\lib\net40\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="AutoMapper.Net4">
+      <HintPath>..\packages\AutoMapper.3.3.0\lib\net40\AutoMapper.Net4.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -151,10 +157,16 @@
     <Compile Include="Global\Authentication\IUserProvider.cs" />
     <Compile Include="Global\Authentication\UserIdentity.cs" />
     <Compile Include="Global\Authentication\UserProvider.cs" />
+    <Compile Include="Global\Mappers\CommonMapper.cs" />
+    <Compile Include="Global\Mappers\IMapper.cs" />
+    <Compile Include="Global\Repository\Documents\DocumentRepository.cs" />
+    <Compile Include="Global\Repository\Documents\IDocumentRepository.cs" />
+    <Compile Include="Global\Repository\UploadedFiles\IUploadedFileRepository.cs" />
+    <Compile Include="Global\Repository\UploadedFiles\UploadedFileRepository.cs" />
+    <Compile Include="Global\Repository\Users\IUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Global\Repository\IRepository.cs" />
-    <Compile Include="Global\Repository\Repository.cs" />
-    <Compile Include="Global\Repository\RepositoryUser.cs" />
+    <Compile Include="Global\Repository\Users\UserRepository.cs" />
+    <Compile Include="ViewModel\DocumentView.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -163,9 +175,11 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\Angular\angular.js" />
     <Content Include="Scripts\Application\Base\app.js" />
+    <Content Include="Scripts\Application\Document\Controllers\documentEditerController.js" />
     <Content Include="Scripts\Application\Document\Controllers\documentsController.js" />
     <Content Include="Scripts\Application\Document\Controllers\uploadController.js" />
     <Content Include="Scripts\Application\Document\documentModule.js" />
+    <Content Include="Scripts\Application\Document\Services\documentFactory.js" />
     <Content Include="Scripts\Application\Info\Controllers\infoController.js" />
     <Content Include="Scripts\Application\Info\infoModule.js" />
     <Content Include="Scripts\Application\Menu\Controllers\menuController.js" />
@@ -674,7 +688,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Scripts\Application\Document\Services\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -706,6 +719,9 @@
   <ItemGroup>
     <Content Include="Views\Upload\Index.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Documents\Edit.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
@@ -734,6 +750,7 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <Import Project="..\packages\AutoMapper.3.3.0\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.0\tools\AutoMapper.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
