--- a/SignApplication/SignApplication.csproj
+++ b/SignApplication/SignApplication.csproj
@@ -159,14 +159,39 @@
     <Compile Include="Global\Authentication\UserProvider.cs" />
     <Compile Include="Global\Mappers\CommonMapper.cs" />
     <Compile Include="Global\Mappers\IMapper.cs" />
+    <Compile Include="Global\Repository\ContentTemplates\ContentTemplateRepository.cs" />
+    <Compile Include="Global\Repository\ContentTemplates\IContentTemplateRepository.cs" />
+    <Compile Include="Global\Repository\ContentTypes\ContentTypeRepository.cs" />
+    <Compile Include="Global\Repository\ContentTypes\IContentTypeRepository.cs" />
     <Compile Include="Global\Repository\Documents\DocumentRepository.cs" />
     <Compile Include="Global\Repository\Documents\IDocumentRepository.cs" />
+    <Compile Include="Global\Repository\RequestDocContents\IRequestDocContentRepository.cs" />
+    <Compile Include="Global\Repository\RequestDocContents\RequestDocContentRepository.cs" />
+    <Compile Include="Global\Repository\Requests\IRequestRepository.cs" />
+    <Compile Include="Global\Repository\Requests\RequestRepository.cs" />
+    <Compile Include="Global\Repository\SystemLists\ISystemListRepository.cs" />
+    <Compile Include="Global\Repository\SystemLists\SystemListRepository.cs" />
+    <Compile Include="Global\Repository\SystemListValues\ISystemListValueRepository.cs" />
+    <Compile Include="Global\Repository\SystemListValues\SystemListValueRepository.cs" />
+    <Compile Include="Global\Repository\SystemLogs\ISystemLogRepository.cs" />
+    <Compile Include="Global\Repository\SystemLogs\SystemLogRepository.cs" />
     <Compile Include="Global\Repository\UploadedFiles\IUploadedFileRepository.cs" />
     <Compile Include="Global\Repository\UploadedFiles\UploadedFileRepository.cs" />
     <Compile Include="Global\Repository\Users\IUserRepository.cs" />
+    <Compile Include="Global\Service\Documents\DocumentService.cs" />
+    <Compile Include="Global\Service\Documents\IDocumentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Global\Repository\Users\UserRepository.cs" />
+    <Compile Include="ViewModel\ContentTemplateView.cs" />
+    <Compile Include="ViewModel\ContentTypeView.cs" />
     <Compile Include="ViewModel\DocumentView.cs" />
+    <Compile Include="ViewModel\RequestDocContentView.cs" />
+    <Compile Include="ViewModel\RequestView.cs" />
+    <Compile Include="ViewModel\SystemListValueView.cs" />
+    <Compile Include="ViewModel\SystemListView.cs" />
+    <Compile Include="ViewModel\SystemLogView.cs" />
+    <Compile Include="ViewModel\UploadedFileView.cs" />
+    <Compile Include="ViewModel\UserView.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -178,8 +203,11 @@
     <Content Include="Scripts\Application\Document\Controllers\documentEditerController.js" />
     <Content Include="Scripts\Application\Document\Controllers\documentsController.js" />
     <Content Include="Scripts\Application\Document\Controllers\uploadController.js" />
+    <Content Include="Scripts\Application\Document\Directives\documentElementDirective.js" />
     <Content Include="Scripts\Application\Document\documentModule.js" />
-    <Content Include="Scripts\Application\Document\Services\documentFactory.js" />
+    <Content Include="Scripts\Application\Document\Factories\documentElementFactory.js" />
+    <Content Include="Scripts\Application\Document\Services\documentElementService.js" />
+    <Content Include="Scripts\Application\Document\Factories\documentFactory.js" />
     <Content Include="Scripts\Application\Info\Controllers\infoController.js" />
     <Content Include="Scripts\Application\Info\infoModule.js" />
     <Content Include="Scripts\Application\Menu\Controllers\menuController.js" />
@@ -193,6 +221,8 @@
     <Content Include="Scripts\FileUpload\jquery.fileupload.js" />
     <Content Include="Scripts\FileUpload\jquery.iframe-transport.js" />
     <Content Include="Scripts\FileUpload\vendor\jquery.ui.widget.js" />
+    <Content Include="Scripts\Ui-bootstrap\ui-bootstrap-tpls-0.12.0.min.js" />
+    <Content Include="Themes\Default\alexander\alexander.css" />
     <Content Include="Themes\Default\css\jquery.fileupload-ui.css" />
     <Content Include="Themes\Default\css\jquery.fileupload.css" />
     <Content Include="Themes\Default\css\Site.css" />
@@ -676,6 +706,7 @@
     <Content Include="Themes\Default\img\64x64\user.png" />
     <Content Include="Themes\Default\img\64x64\video.png" />
     <Content Include="Themes\Default\img\64x64\webcam.png" />
+    <Content Include="Themes\Default\img\a_blue.png" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -721,6 +752,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Documents\Edit.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Html\Document\DocumentElement.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Themes\Default\alexander\alexander.eot" />
+    <Content Include="Themes\Default\alexander\alexander.ttf" />
+    <Content Include="Themes\Default\alexander\alexander.woff" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
