--- a/SignApplication.Model/SignApplication.Model.csproj
+++ b/SignApplication.Model/SignApplication.Model.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddressesBook.cs" />
     <Compile Include="ContentTemplate.cs" />
     <Compile Include="ContentType.cs" />
     <Compile Include="DBConnection\SignAppContext.cs" />
