--- a/SignApplication/Web.config
+++ b/SignApplication/Web.config
@@ -12,6 +12,17 @@
     <add name="ConnectionString" connectionString="Data Source=PAVEL-PC\PAVELSERVER;Initial Catalog=SignDataBase;Integrated Security=False;User ID=sa;Password=sa_kanar;Application Name=pavel" providerName="System.Data.SqlClient" />
     <add name="ConnectionString_Work" connectionString="Data Source=KANARSERVER\SQL2008;Initial Catalog=StaffingMC_MaximS_test;Integrated Security=False;User ID=sa;Password=sa_kanar;Application Name=pavel" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  
+  <system.net>
+    <mailSettings>
+        <smtp deliveryMethod="Network" from="sign.application@yandex.ru">
+            <network host="smtp.yandex.ru" 
+                     userName="sign.application@yandex.ru" 
+                     password="MesLu21#Clz0" port="25" enableSsl="true" defaultCredentials="false"/>
+        </smtp>
+    </mailSettings>
+  </system.net>
+  
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
