--- a/SignApplication/SignApplication.csproj
+++ b/SignApplication/SignApplication.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>SignApplication</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -233,6 +233,10 @@
     <Content Include="Scripts\Application\Menu\menuModule.js" />
     <Content Include="Scripts\Application\Request\request.module.js" />
     <Content Include="Scripts\Application\Setup\SetupController.js" />
+    <Content Include="Scripts\Charts\angular-chart.css" />
+    <Content Include="Scripts\Charts\angular-chart.js" />
+    <Content Include="Scripts\Charts\Chart.js" />
+    <Content Include="Scripts\Charts\Chart.min.js" />
     <Content Include="Scripts\FileUpload\jquery.fileupload-angular.js" />
     <Content Include="Scripts\FileUpload\jquery.fileupload-audio.js" />
     <Content Include="Scripts\FileUpload\jquery.fileupload-image.js" />
@@ -813,7 +817,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>1682</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:38324/</IISUrl>
+          <IISUrl>http://localhost:73</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
